# telegram-mod-bot

./: .env.example  .gitignore  CLAUDE_CODE_INSTRUCTIONS.md  Dockerfile  LICENSE  PROJECT_SPEC.md  README.md  docker-compose.yml  main.py  pyproject.toml
scripts/: seed_knowledge.py
src/: config.py  main.py
src/bot/: app.py
src/bot/handlers/: callback_handler.py  command_handler.py  message_handler.py
src/core/: exceptions.py  interfaces.py
src/models/: database.py  enums.py  schemas.py
src/services/knowledge/: generator.py  registry.py  retriever.py  router.py
src/services/llm/: classifier.py  client.py  prompts.py
src/services/moderation/: service.py
src/utils/: embeddings.py  helpers.py
