[project]
name = "telegram-mod-bot"
version = "0.1.0"
description = """
An intelligent Telegram bot that combines AI-powered content moderation with a dynamic knowledge/FAQ system.
Features include: LLM-based message classification using Claude AI for detecting spam, scams, hate speech, and
harassment; automated moderation actions (auto-delete, admin review, or allow); keyword scanning with regex patterns;
user whitelist management; dynamic knowledge base system with RAG (Retrieval-Augmented Generation) for answering
questions using semantic search and LLM generation; intelligent routing to select relevant knowledge bases; admin
commands for dynamic configuration without code changes; and a complete review workflow with inline buttons. Built
with Python 3.12+, Anthropic Claude API, OpenAI embeddings, python-telegram-bot, Pydantic, and SQLAlchemy. Supports
both in-memory operation for quick deployment and PostgreSQL/Redis for production use.
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "anthropic>=0.18.0",
    "asyncpg>=0.29.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "python-telegram-bot[all]>=21.0",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
]
